# research-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: example-question.md  sample-output.md
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: MermaidDiagram.jsx  MetricsPanel.jsx  ProgressTracker.jsx  ReportView.jsx  ResearchForm.jsx  RunHistory.jsx
research_agent/: __init__.py  config.py
research_agent/api/: app.py
research_agent/api/routers/: research.py
research_agent/cli/: main.py
research_agent/graph/: __init__.py  builder.py  nodes.py  prompts.py  state.py
research_agent/llm/: __init__.py  adapter.py  client.py
research_agent/memory/: __init__.py  store.py
research_agent/report/: __init__.py  renderer.py
research_agent/tools/: __init__.py  base.py  elastic_rag.py  fetch_url.py  local_docs.py  python_sandbox.py  web_search.py
research_agent/util/: logging.py  pdf.py
tests/: conftest.py  test_api.py  test_cli.py  test_fetch_url.py  test_graph_integration.py  test_graph_nodes.py  test_llm_client.py  test_logging.py  test_memory.py  test_pdf.py  test_renderer.py  test_research_router.py  test_tools.py  test_web_search.py
